 - updated commons-cli to version 1.8.0
 - updated sqlite-jdbc to version 3.45.3.0
 - updated JUnit to version 5.10.2
 - updated Mockito to version 5.12.0
 SportsTracker changes:
 - added slf4j-jdk14 dependency for logging in sqlite-jdbc
   (uses the slf4j-nop provider otherwise, which silently discards all logging)
 - Equipment Usage Dialog: fixed font width and alignment in table header

 ExerciseViewer changes:
 - Bugfix for drag & drop of activity files to the Calendar View
   (timeout issue when completing the drag event)
 - Garmin FIT parser: bugfix for issue #266
   - fixed calculation of lap split times and lap speeds
     (lap time can include breaks)
 - Main Panel: show total duration and pause/stop duration of an exercise
   - currently only supported for Garmin FIT files

v8.0.1:
 Project changes:
 - updated JavaFX / OpenJFX to version 21.0.2
   - fixes issue of slow app startup on macOS 14 (Sonoma)
   - fixes bug of inactive / unselected window after app startup
 - fixed bug when selecting / editing entries in Exercise / Notes / Weight list
   - was caused by an incompatibility of JavaFX versions between SportsTracker
     (requires JavaFX 21) and JFreeChart-FX (requires JavaFX 15)
 - updated Java to version 21.0.2 (bundled in app packages)
 - updated Kotlin to version 1.9.22
 - updated ControlsFX to version 11.2.0
 - updated commons-cli to version 1.6.0
 - updated sqlite-jdbc to version 3.45.0.0
 - updated JUnit to version 5.10.1
 - updated Mockito to version 5.9.0
 SportsTracker changes:
 ExerciseViewer changes:

v8.0.0:
 Project changes:
 - updated Java to version 21
 - updated JavaFX / OpenJFX to version 21.0.1
 - updated Kotlin to version 1.9.20
 - updated ControlsFX to version 11.1.2
 - updated JUnit to version 5.10.0
 - updated Mockito to version 5.4.0
 - updated JFreeChart to version 1.5.3 and JFreeChart-FX to 2.0.1
 - updated sqlite-jdbc to version 3.43.2.1
 SportsTracker changes:
 - Exercise: optional values are now nullable